Fix fast restart network update in case of multiple components
Signed-off-by: Geoffroy Jamgotchian <geoffroy.jamgotchian@rte-france.com>